--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Temperature in San Franciso Line Chart</title>
+    <title>Multiple Line Chart</title>
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
     <script src="https://unpkg.com/d3@5.7.0/dist/d3.min.js"></script>
     <script type = "module" src="assets/js/index.js"></script>
